--- a/viewDoctor.html
+++ b/viewDoctor.html
@@ -18,8 +18,15 @@
             FindMyDoctor
         </a>
     </nav>
- <script src="viewDoctor.js"></script> 
- <?php echo $_GET["id"];?>
+    
+    <div id ="docInfo"></div> 
+    <br/><br/>
+    
+    <div id ="relDoc">
+            <h4>You might also be interested in...</h4>
+    </div>
+    <script src="viewDoctor.js">
+        </script>
 <footer>Made by Sharol</footer>
 </body>
 </html>
