--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
      <nav class="navbar navbar-dark bg-dark">
@@ -24,21 +27,8 @@
        <p>Sed mattis libero nibh, eget interdum quam vestibulum vel. Cras arcu enim, efficitur a lacus at, aliquam cursus purus. Praesent leo odio, pulvinar ut auctor ut, varius eget risus. Nam posuere metus nunc, vel bibendum metus scelerisque ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis tempor elit felis, et tempor nibh fringilla sed. Suspendisse tristique vehicula ex, id mattis urna iaculis id. Donec ut bibendum felis. Integer gravida sodales rutrum. Aliquam vehicula accumsan mattis. Etiam eget ex nulla. Nunc odio enim, fringilla eget euismod sed, elem</p>
     </div>
  <div class="search-list">  
-        <div class="filtnsearch">
-                <div class="filt row">
-                  <div class="col-sm-8">
-                   <input type="text" id="fil" class="form-control form-control" placeholder="Enter Name, State or Speciality...">
-                 </div>
-                 <div class="col-sm-4">
-                   <button type="button" class="btn btn-info" onclick="addFilter()" >Quick Search</button>
-                 </div>
-                </div> 
-                <div class="row">
-                 <ul id="filterList"></ul>
-                
-                </div>
-               </div> 
- <div id="tableDiv">
+         
+ <div id="tableDiv" class="table-responsive">
      <table id ="tab">
          <thead>
             <tr>
@@ -46,8 +36,8 @@
                 <td>Speciality</td>
                 <td>Location</td>
                 <td>State</td>
-                <td>Address</td>
                 <td>Phone</td>
+                <td>Rating</td>
                 <td><i class="fas fa-link"></i>
                 </td>
             </tr>
@@ -55,16 +45,16 @@
          <tbody id="myTable"></tbody>
      </table>    
  </div> 
- <script>
-        function addFilter(){
-                    var value = $("#fil").val().toLowerCase();
-                    $("#myTable tr").filter(function(){
-                        $(this).toggle($(this).text().toLowerCase().indexOf(value)>-1)
-                    });
-        }
-         </script>
+
+ 
  </div>
  <script src="index.js"></script> 
-<footer>Made by Sharol</footer>
+ <script>
+       $(document).ready( function () {
+             $('#tab').DataTable();
+        } );
+ </script>
+
+<footer>This is a demo website</footer>
 </body>
 </html>
